--- a/client/head.html
+++ b/client/head.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="utf-8">
-  <title>NewOS</title>
+  <title>Synamon</title>
   <meta name="description" content="An application to help people with Autism learn synonyms">
   <meta name="viewport" content="user-scalable=no, initial-scale=1, minimal-ui, maximum-scale=1, minimum-scale=1" />
   <link rel="shortcut icon" type="image/png" href="favicon.png?v2" sizes="16x16 32x32 64x64">
